<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by_hint"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_date"
                    android:checked="true"
                    android:title="@string/chip_sort_by_date"/>
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/chip_sort_by_title"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />







</menu>