<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="ru.reliableteam.noteorganizer.notes.notes_list_fragment.view.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes">
    </fragment>
    <fragment
        android:id="@+id/navigation_todos"
        android:name="ru.reliableteam.noteorganizer.todos.todos_fragment.view.TodosFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todos" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.reliableteam.noteorganizer.settings.view.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>