<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.help_activity.HelpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_keyboard_arrow_left_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <!--HOW TO NAME NOTES-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/how_to_make_notes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/how_to_make_notes_tv"
                style="@style/TextView.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_how_to_name_notes_tv" />

            <TextView
                android:id="@+id/how_to_make_notes_tv_subheader"
                style="@style/TextView.SubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_how_to_name_notes_tv_subheader" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/how_to_make_notes_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    style="@style/TextView.Body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/how_to_name_note" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/where_to_save_notes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/where_to_save_notes_tv"
                style="@style/TextView.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where_to_save_notes_tv" />

            <TextView
                android:id="@+id/where_to_save_notes_tv_subheader"
                style="@style/TextView.SubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where_to_save_notes_tv_subheader" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/where_to_save_notes_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    style="@style/TextView.Body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/where_to_save_note" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>